fix: Default to align items center (#1399)

--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -76,6 +76,7 @@ $button
     text-transform   uppercase
     text-decoration  none
     cursor           pointer
+    align-items      center
 
     svg
         fill         currentColor
